# repo-analyzer

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
repo_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/repo_analyzer/: api.py  cache.py  cli.py  engine.py  exporter.py  fetcher.py  scorer.py  selector.py
src/repo_analyzer.egg-info/: SOURCES.txt  requires.txt
tests/: test_analyzer.py  test_dummy.py
